# create-a-c-library-for-python-by-pybin11

./: CMakeLists.txt  README.md
videoparse/: CMakeLists.txt  videoparse.cpp  videoparse.h
